# zaplivre.app

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_V2.md  AUDIT_REPORT_V3.md  BUILD_AND_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXECUCAO.md  FASES_5_E_6_COMPLETAS.md  FASE_7_COMPLETA.md  FASE_8_TESTING_GUIDE.md  ISSUES_BACKLOG.md  Makefile  PROGRESS_REPORT.md  README.md  docker-compose.yml  stack.yml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: android-ci.yml  ci.yml  core-ci.yml  desktop-ci.yml  e2e-android.yml  e2e-ios.yml  ios-ci.yml
android/: BUILD_GUIDE.md  ETAPA_4_COMPLETED.md  FIREBASE_SETUP.md  README.md  TESTING.md  build-native.sh  build.gradle.kts  generate-bindings.sh  gradle.properties.example  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
core/: Cargo.toml  FASE5_ARTIFACTS.md  FFI_IMPLEMENTATION.md  build.rs
core/examples/: basic_p2p.rs  simple_identity.rs
core/src/: identity_client.rs  lib.rs  mepassa.udl  zaplivre.udl
core/src/api/: builder.rs  client.rs  events.rs  mod.rs
core/src/crypto/: group.rs  mod.rs  session.rs  signal.rs  storage.rs
core/src/ffi/: client.rs  mod.rs  types.rs
core/src/group/: envelope.rs  manager.rs  mod.rs  sender_keys.rs  storage.rs  types.rs
core/src/identity/: keypair.rs  mod.rs  prekeys.rs  storage.rs
core/src/media/: envelope.rs  image.rs  mod.rs
core/src/network/: behaviour.rs  connection.rs  message_handler.rs  messaging.rs  mod.rs  nat_detection.rs  relay.rs  retry.rs  swarm.rs  transport.rs
core/src/protocol/: codec.rs  mod.rs
core/src/reactions/: envelope.rs  mod.rs
core/src/storage/: contacts.rs  database.rs  groups.rs  messages.rs  migrations.rs  mod.rs  outbox.rs  prekeys.rs  reactions.rs  schema.rs
core/src/utils/: config.rs  error.rs  logging.rs  mod.rs
core/src/voip/: call.rs  codec.rs  integration.rs  manager.rs  mod.rs  rtp_video.rs  signaling.rs  signaling_server.rs  turn.rs  video.rs  video_pipeline.rs  webrtc.rs
core/tests/: README.md  identity_integration.rs  message_integration.rs  p2p_messaging.rs  relay_integration.rs  reliability.rs  voip_integration.rs
desktop/: BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  identity_store.rs  macos_video.rs  main.rs
desktop/src/__tests__/: App.incoming-call.test.tsx  App.init.test.tsx
desktop/src/components/: BackupModal.tsx  QRCodeModal.tsx  SearchModal.tsx
desktop/src/state/: voipState.tsx
desktop/src/styles/: VideoCallView.css  voipToast.css
desktop/src/test/: setup.ts  tauriMock.ts
desktop/src/types/: webcodecs.d.ts
desktop/src/utils/: format.ts
desktop/src/views/: CallView.tsx  ChatView.tsx  ConversationsView.tsx  GroupChatView.tsx  GroupListView.tsx  OnboardingView.tsx  VideoCallView.tsx
docs/: APNS_SETUP_GUIDE.md  README.md
docs/api/: identity-server.yaml
docs/architecture/: 01-hybrid-architecture.md  02-core-components.md
docs/decisions/: 001-username-identity-system.md
docs/guides/: android-testing.md  audit-2026-02-04.md  audit-2026-07-02.md  audit-2026-07-23.md  desktop-testing.md  getting-started.md  github-secrets-setup.md  implementation-backlog.md  implementation-plan-2026-07-02.md  implementation-plan.md  ios-testing.md  push-checklist.md  push.md  self-hosting.md  testing-hybrid.md  testing-manual.md  video-calls-checklist.md  video-calls.md
docs/schemas/: sqlite-client.sql
documentos/: zaplivre_brand_guidelines.md  zaplivre_chamadas_voip.md  zaplivre_logo_prompts.md  zaplivre_plano_30_dias.md  zaplivre_roadmap_atualizado.md  zaplivre_stack_visual.md  zaplivre_tech_stack_completo.md
documentos/start/: LEIA_PRIMEIRO_arquitetura_hibrida.md  zaplivre_arquitetura_hibrida.md  zaplivre_comparacao_arquiteturas.md
e2e/maestro/: README.md
e2e/maestro/android/: 01_onboarding_criar.yml  02_navegacao_telas.yml  03_enviar_mensagem.yml  04_backup_identidade.yml  05_criar_grupo.yml  06_busca.yml  07_grupo_chat.yml  08_group_info.yml  09_settings_toggles.yml  10_media_gallery.yml  config.yaml
e2e/maestro/ios/: 03_criar_grupo.yml  (+8 more)
ios/: .gitignore  README.md  build-all.sh  build-rust.sh  generate-bindings.sh  pre-build-check.sh  project.yml
ios/MePassa/: Info.plist  MePassa.dev.entitlements
ios/MePassa.xcodeproj/: project.pbxproj
ios/ZapLivre/: Info.plist  ZapLivre-Bridging-Header.h  ZapLivre.dev.entitlements
ios/ZapLivre.xcodeproj/: project.pbxproj
ios/legacy-scripts/: README.md  check.sh  fix-module-import.sh  generate_bindings.sh  generate_swift_bindings.py
proto/: messages.proto
scripts/: audit-bootstrap-config.sh  build-dmg.md  build-dmg.sh  build.sh  test-apns.sh  test-fcm.sh  validate-dht.sh
server/bootstrap/: .env.bootstrap-2.example  .env.example  Cargo.toml  Dockerfile  FASE_9_COMPLETED.md  README.md  STORAGE_SQLITE.md  stack.yml
server/bootstrap/src/: behaviour.rs  config.rs  health.rs  main.rs  storage.rs
server/coturn/: turnserver.conf
server/identity/: .env.example  Cargo.toml  Dockerfile  README.md  schema.sql
server/identity/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  rate_limit.rs
server/identity/tests/: README.md  integration_tests.rs
server/postgres/: init.sql
server/push/: .env.example  Cargo.toml  Dockerfile  ETAPA_3_COMPLETED.md  README.md
server/push/certs/: README.md
server/push/src/: apns.rs  auth.rs  fcm.rs  main.rs
server/push/src/api/: register.rs  send.rs  unregister.rs
server/signaling/: Cargo.toml  Dockerfile  README.md
server/signaling/src/: main.rs
server/store/: Cargo.toml  Dockerfile
server/store/src/: api.rs  auth.rs  database.rs  main.rs  models.rs  push_notifier.rs  redis_client.rs  ttl_cleanup.rs
server/turn-credentials/: Cargo.toml  Dockerfile
server/turn-credentials/src/: auth.rs  config.rs  handlers.rs  main.rs  request_auth.rs
(+228 files in other folders)
