[package]
name = "zaplivre-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for ZapLivre P2P chat platform"

[lib]
name = "zaplivre_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bincode = { workspace = true }
uniffi = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Signal Protocol (E2E encryption)
libsignal-protocol-syft = "0.85.3-beta.5"
rand_core06 = { package = "rand_core", version = "0.6" }

# CRDTs for sync - TODO: implementar depois
# automerge = "0.5"

# WebRTC for VoIP (FASE 12) - Optional for iOS builds
webrtc = { workspace = true, optional = true }
interceptor = { workspace = true, optional = true }
opus = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }

# Additional dependencies
bs58 = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Media processing (FASE 16)
image = "0.25"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
rand = { workspace = true }
uniffi = { workspace = true, features = ["bindgen"] }
uniffi_bindgen = "0.31"
camino = "1.1"

[features]
default = []
voip = ["webrtc", "interceptor", "opus", "cpal"]
video = ["webrtc", "interceptor"]  # Video-only (no audio deps)
integration-tests = []

[build-dependencies]
prost-build = "0.12"
uniffi = { workspace = true, features = ["build"] }
camino = "1.1"

# Benchmarks (TODO: create benchmark files)
# [[bench]]
# name = "crypto_bench"
# harness = false

# [[bench]]
# name = "network_bench"
# harness = false
