[package]
name = "mepassa-desktop"
version = "0.1.0"
edition = "2021"
authors = ["IntegrallTech <contato@integralltech.com.br>"]
license = "AGPL-3.0"
description = "MePassa Desktop - Hybrid P2P messaging app"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 2.0
tauri = { version = "2.0", features = [
    "tray-icon",
] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Local dependency - mepassa-core with video support
mepassa-core = { path = "../../core", features = ["voip"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[workspace]
# Empty workspace to prevent inheriting from parent
