[package]
name = "mepassa-push"
version = "0.1.0"
edition = "2021"
authors = ["Integrall Tech <contato@integralltech.com.br>"]
description = "Push notification service for MePassa"
license = "AGPL-3.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["json"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database (PostgreSQL only; workspace version to avoid compiling two sqlx trees)
sqlx = { workspace = true, features = ["postgres", "macros"] }

# Firebase Cloud Messaging
fcm = "0.9"

# Apple Push Notification Service
jsonwebtoken = "9.2"
hyper = { version = "1.5", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
rustls = "0.23"
http-body-util = "0.1"

# Environment variables
dotenvy = "0.15"

# Local dependencies
# mepassa-core = { path = "../../core" }  # TODO: adicionar depois

[[bin]]
name = "mepassa-push"
path = "src/main.rs"
