[package]
name = "zaplivre-push"
version = "0.1.0"
edition = "2021"
authors = ["Integrall Tech <contato@integralltech.com.br>"]
description = "Push notification service for ZapLivre"
license = "AGPL-3.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["json"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }

# Database (PostgreSQL only; workspace version to avoid compiling two sqlx trees)
sqlx = { workspace = true, features = ["postgres", "macros"] }

# Firebase Cloud Messaging (HTTP v1 - OAuth2 com service account)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Apple Push Notification Service
jsonwebtoken = "9.2"
hyper = { version = "1.5", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
rustls = "0.23"
http-body-util = "0.1"

# Environment variables
dotenvy = "0.15"

# Local dependencies
# zaplivre-core = { path = "../../core" }  # TODO: adicionar depois

[[bin]]
name = "zaplivre-push"
path = "src/main.rs"
