[package]
name = "mepassa-signaling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebSocket signaling server for MePassa VoIP fallback"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = "2.1"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }
