[package]
name = "zaplivre-store"
version = "0.1.0"
edition = "2021"
authors = ["Integrall Tech <contato@integralltech.com.br>"]
description = "Message store service for offline delivery"
license = "AGPL-3.0"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
redis = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# Push integration (PSH-02): notificar destinatário offline via push-server
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Auth (SEC-09): verificação Ed25519 com chave extraída do peer ID
ed25519-dalek = "2.1"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }

[[bin]]
name = "zaplivre-store"
path = "src/main.rs"
